--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="right">
              <div class="case">
                 <div class="pic">
-                    <img src="images/Homepage.jpg">
+                    <img src="images/homepage.jpg">
                     <div class="content">
                         <a href="casestudy1.html"><p>FULL CASE STUDY <b>>></b></p></a>
                     </div>
