--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               
               <div class="mypic">
                   <img src="images/me.jpg">
-                  <div class="text-block"><p class="des">I want to work as a <b><i>UX & UI Designer</i></b> after I graduate. Currently, I am a third year student of Haaga-Helia UAS pasila campus. I took all the courses realted and finish one user experience course on udemy to enhance my knowledges and skills. I am also learning a graphic design course using photoshop and it will be done soon. I have passion keep learning and improve my skills for the future work. My wish is to help create user friednly design which feeds thier needs.</p></div>
+                  <div class="text-block"><p class="des">I want to work as a <b><i>UX & UI Designer</i></b> after I graduate. Currently, I am a third year student of Haaga-Helia UAS pasila campus. I took all the courses realted and finish one user experience course on udemy to enhance my knowledges and skills. Also, I have learnt a graphic design course using PS, AI and InDesign tools. I have passion for learning and improving my skills for the future work. My wish is to create user friednly design which feeds thier needs.</p></div>
               </div>
           </div>
           <div class="right">
