--- a/casestudy1.html
+++ b/casestudy1.html
@@ -59,7 +59,7 @@
                 <div>
                     <h2>The result</h2>
                     <ul>
-                        <li>High-fidelity prototype:<a href="https://xd.adobe.com/view/0ea1c966-f898-48b9-5ea3-ebee097f8670-7890/"> https://xd.adobe.com/view/0ea1c966-f898-48b9-5ea3-ebee097f8670-7890/</a></li>
+                        <li>High-fidelity prototype:<a href="https://xd.adobe.com/view/0704479f-9527-47d3-b03d-99649230189d-5257/?fullscreen&hints=off"> https://xd.adobe.com/view/0ea1c966-f898-48b9-5ea3-ebee097f8670-7890/</a></li>
                             <img src="images/homepage.jpg">
                             <p>The landing page includes nav bar and hero image. It's functional and attractive.</p>
                             <img src="images/models.jpg">
