--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
              </div>
              <div class="case">
-                <p class="link">Prototype link:  <a href="https://xd.adobe.com/view/0704479f-9527-47d3-b03d-99649230189d-5257/?fullscreen&hints=off">  https://xd.adobe.com/view/0ea1c966-f898-48b9-5ea3-ebee097f8670-7890/</a></p>
+                <p class="link">Prototype link:  <a href="https://xd.adobe.com/view/0704479f-9527-47d3-b03d-99649230189d-5257/?fullscreen&hints=off">  https://xd.adobe.com/view/0704479f-9527-47d3-b03d-99649230189d-5257/?fullscreen&hints=off</a></p>
              </div>
             
           </div>
